fixed an issue with a wierd overflow issue

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4030,7 +4030,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .tab-content {
-  overflow: auto;
+  overflow: show;
 }
 
 .tabs-below > .nav-tabs,
